favorites done working on create review

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Flask Starter</title>
+    <title>Philly Roll</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://cdn.discordapp.com/attachments/1113213089702228038/1115026569237368953/image-removebg-preview.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
