--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8" />
   <title>Philly Roll</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta property="og:title" content="Chillify" />
+  <meta property="og:title" content="Philly Roll" />
   <meta property="og:image"
-    content="https://cdn.discordapp.com/attachments/1118303754714886259/1130607494096498749/image.png" />
+    content="https://cdn.discordapp.com/attachments/1117972822686433291/1123980015260934174/image.png" />
   <meta property="og:description"
-    content="Chillify is a soft-clone of Spotify and features music I typically listen to while coding/studying." />
-  <meta property="og:url" content="https://github.com/danishprasla/chillify" />
+    content="Philly Roll is a clone of the popular anime streaming site Crunchy Roll It allows for full CRUD of shows, episodes and reviews." />
+  <meta property="og:url" content="https://github.com/kevinhuang1208/Clone-Crunchyroll" />
   <link rel="icon"
     href="https://cdn.discordapp.com/attachments/1113213089702228038/1115026569237368953/image-removebg-preview.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
